--- a/i18n/default.json
+++ b/i18n/default.json
@@ -1,16 +1,21 @@
 ﻿{
   "quickShop.button": "Open ",
-  "quickShop.button.pierre": "Pierre Shop",
-  "quickShop.button.willy": "Willy Shop",
-  "quickShop.button.adventure": "Marlon Shop",
-  "quickShop.button.blacksmith": "Clint Shop",
-  "quickShop.button.saloon": "Gus Shop",
-  "quickShop.button.hospital": "Harvey Shop",
-  "quickShop.button.krobus": "Krobus Shop",
-  "quickShop.button.animal": "Marnie Shop",
-  "quickShop.button.merchant": "Merchant",
-  "quickShop.button.qi": "Mr.Qi Shop",
-  "quickShop.button.oasis": "Sandy Shop",
+  "quickShop.button.pierreShop": "Pierre's shop",
+  "quickShop.button.harveyShop": "harveyShop",
+  "quickShop.button.gusShop": "Gus's Shop",
+  "quickShop.button.robinShop": "Robin's shop",
+  "quickShop.button.willyShop": "Willy's shop",
+  "quickShop.button.krobusShop": "Krobus's shop",
+  "quickShop.button.marnieShop": "Marnie's shop",
+  "quickShop.button.animalShop": "Animal shop",
+  "quickShop.button.clintShop": "Clint's shop",
+  "quickShop.button.morrisShop": "Morris's shop",
+  "quickShop.button.dwarfShop": "Dwarf's shop",
+  "quickShop.button.marlonShop": "Marlon's shop",
+  "quickShop.button.hatShop": "Hat shop",
+  "quickShop.button.qiShop": "Mr.Qi's shop",
+  "quickShop.button.sandyShop": "Sandy's shop",
+  "quickShop.button.joJaCD": "JoJa CD Project",
   "quickShop.button.carpenter": "Carpenter building",
   "quickShop.button.wizard": "Magic building",
   "quickShop.button.bundles": "Bundles",
