--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,16 +1,21 @@
 ﻿{
-  "quickShop.button": "打开 ",
-  "quickShop.button.pierre": "皮埃尔的商店",
-  "quickShop.button.willy": "威利的鱼店",
-  "quickShop.button.adventure": "马龙的商店",
-  "quickShop.button.blacksmith": "克林特的商店",
-  "quickShop.button.saloon": "格斯的商店",
-  "quickShop.button.hospital": "哈维的商店",
-  "quickShop.button.krobus": "科罗布斯的商店",
-  "quickShop.button.animal": "玛妮的商店",
-  "quickShop.button.merchant": "商人",
-  "quickShop.button.qi": "齐先生的商店",
-  "quickShop.button.oasis": "桑迪的商店",
+  "quickShop.button": "打开",
+  "quickShop.button.pierreShop": "皮埃尔的商店",
+  "quickShop.button.harveyShop": "哈维的商店",
+  "quickShop.button.gusShop": "格斯的商店",
+  "quickShop.button.robinShop": "罗宾的商店",
+  "quickShop.button.willyShop": "威利的商店",
+  "quickShop.button.krobusShop": "克罗布斯的商店",
+  "quickShop.button.marnieShop": "玛尼的商店",
+  "quickShop.button.animalShop": "动物商店",
+  "quickShop.button.clintShop": "克林特的商店",
+  "quickShop.button.morrisShop": "莫里斯的商店",
+  "quickShop.button.dwarfShop": "矮人的商店",
+  "quickShop.button.marlonShop": "马龙的商店",
+  "quickShop.button.hatShop": "帽子商店",
+  "quickShop.button.qiShop": "齐先生的商店",
+  "quickShop.button.sandyShop": "桑迪的商店",
+  "quickShop.button.joJaCD": "JoJa社区开发",
   "quickShop.button.carpenter": "木匠建筑",
   "quickShop.button.wizard": "魔法师建筑",
   "quickShop.button.bundles": "献祭包",
