--- a/i18n/default.json
+++ b/i18n/default.json
@@ -1,7 +1,7 @@
 ﻿{
   "quickShop.button": "Open ",
   "quickShop.button.pierreShop": "Pierre's shop",
-  "quickShop.button.harveyShop": "harveyShop",
+  "quickShop.button.harveyShop": "Harvey's shop",
   "quickShop.button.gusShop": "Gus's Shop",
   "quickShop.button.robinShop": "Robin's shop",
   "quickShop.button.willyShop": "Willy's shop",
