--- a/i18n/default.json
+++ b/i18n/default.json
@@ -4,25 +4,30 @@
   "quickShop.button.harveyShop": "Harvey's shop",
   "quickShop.button.gusShop": "Gus's Shop",
   "quickShop.button.robinShop": "Robin's shop",
+  "quickShop.button.carpenter": "Carpenter building",
   "quickShop.button.willyShop": "Willy's shop",
   "quickShop.button.krobusShop": "Krobus's shop",
   "quickShop.button.marnieShop": "Marnie's shop",
   "quickShop.button.animalShop": "Animal shop",
+  "quickShop.button.merchantShop": "Traveling Cart shop",
   "quickShop.button.clintShop": "Clint's shop",
+  "quickShop.button.upgrade": "Tool upgrade",
+  "quickShop.button.geode": "Smashing",
   "quickShop.button.morrisShop": "Morris's shop",
+  "quickShop.button.joJaCD": "JoJa CD Project",
   "quickShop.button.dwarfShop": "Dwarf's shop",
   "quickShop.button.marlonShop": "Marlon's shop",
   "quickShop.button.hatShop": "Hat shop",
   "quickShop.button.qiShop": "Mr.Qi's shop",
   "quickShop.button.sandyShop": "Sandy's shop",
-  "quickShop.button.joJaCD": "JoJa CD Project",
-  "quickShop.button.carpenter": "Carpenter building",
+  "quickShop.button.desertShop": "Desert shop",
   "quickShop.button.wizard": "Magic building",
   "quickShop.button.bundles": "Bundles",
-  "quickShop.button.geode": "Smashing",
-  "quickShop.button.upgrade": "Tool upgrade",
   "quickShop.button.sewing": "Emily Sewing Machine",
   "quickShop.button.dye": "Emily Dye",
   "quickShop.button.mines": "Mine elevator",
-  "quickShop.button.ship": "Shipping Bin"
+  "quickShop.button.ship": "Shipping Bin",
+  "quickShop.button.getUpgradedTool": "Get the upgraded tool",
+  "quickShop.button.backpackUpgrade": "Backpack upgrade",
+  "quickShop.button.houseUpgrade": "House Upgrade"
 }
