--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -4,25 +4,30 @@
   "quickShop.button.harveyShop": "哈维的商店",
   "quickShop.button.gusShop": "格斯的商店",
   "quickShop.button.robinShop": "罗宾的商店",
+  "quickShop.button.carpenter": "木匠建筑",
   "quickShop.button.willyShop": "威利的商店",
-  "quickShop.button.krobusShop": "克罗布斯的商店",
+  "quickShop.button.krobusShop": "科罗布斯的商店",
   "quickShop.button.marnieShop": "玛尼的商店",
   "quickShop.button.animalShop": "动物商店",
+  "quickShop.button.merchantShop": "旅行货车商店",
   "quickShop.button.clintShop": "克林特的商店",
+  "quickShop.button.upgrade": "工具升级",
+  "quickShop.button.geode": "砸晶球",
   "quickShop.button.morrisShop": "莫里斯的商店",
+  "quickShop.button.joJaCD": "JoJa社区开发",
   "quickShop.button.dwarfShop": "矮人的商店",
   "quickShop.button.marlonShop": "马龙的商店",
   "quickShop.button.hatShop": "帽子商店",
   "quickShop.button.qiShop": "齐先生的商店",
   "quickShop.button.sandyShop": "桑迪的商店",
-  "quickShop.button.joJaCD": "JoJa社区开发",
-  "quickShop.button.carpenter": "木匠建筑",
+  "quickShop.button.desertShop": "沙漠商店",
   "quickShop.button.wizard": "魔法师建筑",
   "quickShop.button.bundles": "献祭包",
-  "quickShop.button.geode": "砸晶球",
-  "quickShop.button.upgrade": "工具升级",
   "quickShop.button.sewing": "缝纫机",
   "quickShop.button.dye": "染料",
   "quickShop.button.mines": "矿洞电梯",
-  "quickShop.button.ship": "发货箱"
+  "quickShop.button.ship": "发货箱",
+  "quickShop.button.getUpgradedTool":"获取升级完毕的工具",
+  "quickShop.button.backpackUpgrade": "背包升级",
+  "quickShop.button.houseUpgrade":"房子升级"
 }
