--- a/i18n/default.json
+++ b/i18n/default.json
@@ -10,21 +10,28 @@
   "quickShop.button.marnieShop": "Marnie's shop",
   "quickShop.button.animalShop": "Animal shop",
   "quickShop.button.merchantShop": "Traveling Cart shop",
+  "quickShop.button.renovation": "Renovation",
   "quickShop.button.clintShop": "Clint's shop",
   "quickShop.button.upgrade": "Tool upgrade",
   "quickShop.button.geode": "Smashing",
+  "quickShop.button.specialOrdersBoard": "Special Orders Board",
   "quickShop.button.morrisShop": "Morris's shop",
   "quickShop.button.joJaCD": "JoJa CD Project",
   "quickShop.button.dwarfShop": "Dwarf's shop",
+  "quickShop.button.volcanoDungeonShop": "Volcano Dungeon Shop",
   "quickShop.button.marlonShop": "Marlon's shop",
   "quickShop.button.hatShop": "Hat shop",
-  "quickShop.button.qiShop": "Mr.Qi's shop",
+  "quickShop.button.casinoShop": "Casino shop",
+  "quickShop.button.qiSpecialOrdersBoard": "Mr. Qi's Special Orders Board",
   "quickShop.button.sandyShop": "Sandy's shop",
   "quickShop.button.desertShop": "Desert shop",
+  "quickShop.button.islandTrade": "Island trade",
+  "quickShop.button.resortBar": "Resort bar",
   "quickShop.button.wizard": "Magic building",
   "quickShop.button.bundles": "Bundles",
   "quickShop.button.sewing": "Emily Sewing Machine",
   "quickShop.button.dye": "Emily Dye",
+  "quickShop.button.forge": "Forge",
   "quickShop.button.mines": "Mine elevator",
   "quickShop.button.ship": "Shipping Bin",
   "quickShop.button.getUpgradedTool": "Get the upgraded tool",
