--- a/i18n/default.json
+++ b/i18n/default.json
@@ -16,6 +16,8 @@
   "quickShop.button.clintShop": "Clint's shop",
   "quickShop.button.upgrade": "Tool upgrade",
   "quickShop.button.geode": "Smashing",
+  "quickShop.button.calendar": "Calendar",
+  "quickShop.button.helpWanted": "Help wanted",
   "quickShop.button.specialOrdersBoard": "Special orders board",
   "quickShop.button.morrisShop": "Morris's shop",
   "quickShop.button.joJaCD": "JoJa CD Project",
