--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -16,6 +16,8 @@
   "quickShop.button.clintShop": "克林特的商店",
   "quickShop.button.upgrade": "工具升级",
   "quickShop.button.geode": "砸晶球",
+  "quickShop.button.calendar": "日历",
+  "quickShop.button.helpWanted": "需要帮助",
   "quickShop.button.specialOrdersBoard": "特殊任务板",
   "quickShop.button.morrisShop": "莫里斯的商店",
   "quickShop.button.joJaCD": "JoJa社区开发",
