--- a/QuickShop/i18n/zh.json
+++ b/QuickShop/i18n/zh.json
@@ -1,5 +1,4 @@
 ﻿{
-  "quickShop.button": "打开",
   "quickShop.button.pierreShop": "皮埃尔的商店",
   "quickShop.button.harveyShop": "哈维的商店",
   "quickShop.button.gusShop": "格斯的商店",
@@ -20,12 +19,13 @@
   "quickShop.button.calendar": "日历",
   "quickShop.button.helpWanted": "需要帮助",
   "quickShop.button.specialOrdersBoard": "特殊任务板",
-  "quickShop.button.morrisShop": "莫里斯的商店",
+  "quickShop.button.jojaMarket": "Joja超市",
   "quickShop.button.joJaCD": "JoJa社区开发",
   "quickShop.button.iceCreamStand": "冰淇淋架",
   "quickShop.button.dwarfShop": "矮人的商店",
   "quickShop.button.volcanoDungeonShop": "火山地牢店",
   "quickShop.button.marlonShop": "马龙的商店",
+  "quickShop.button.adventureGuildRecovery": "冒险公会恢复",
   "quickShop.button.hatShop": "帽子商店",
   "quickShop.button.movieTheaterShop": "电影院商店",
   "quickShop.button.casinoShop": "赌场商店",
@@ -34,7 +34,7 @@
   "quickShop.button.sandyShop": "桑迪的商店",
   "quickShop.button.desertShop": "沙漠商店",
   "quickShop.button.wizardBuilding": "魔法师建筑",
-  "quickShop.button.changeAppearance":"改变外表",
+  "quickShop.button.changeAppearance": "改变外表",
   "quickShop.button.islandTrade": "岛屿贸易",
   "quickShop.button.resortBar": "度假酒吧",
   "quickShop.button.bundles": "献祭包",
@@ -43,9 +43,13 @@
   "quickShop.button.forge": "锻造",
   "quickShop.button.mines": "矿洞电梯",
   "quickShop.button.ship": "发货箱",
-  "quickShop.button.getUpgradedTool":"获取升级完毕的工具",
+  "quickShop.button.getUpgradedTool": "获取升级完毕的工具",
   "quickShop.button.backpackUpgrade": "背包升级",
-  "quickShop.button.houseUpgrade":"房子升级",
+  "quickShop.button.houseUpgrade": "房子升级",
   "quickShop.button.houseUpgrade.communityUpgrade": "社区升级",
-  "quickShop.button.houseUpgrade.communityUpgrade.description": "为潘姆建一间房子"
+  "quickShop.button.houseUpgrade.communityUpgrade.description": "为潘姆建一间房子",
+  "quickShop.button.raccoonShop": "浣熊商店",
+  "quickShop.button.booksellerTrade": "书摊老板交易",
+  "quickShop.button.concessions": "电影院小吃",
+  "quickShop.button.petAdoption": "领养宠物"
 }
