--- a/QuickShop/i18n/zh.json
+++ b/QuickShop/i18n/zh.json
@@ -32,7 +32,7 @@
   "quickShop.button.qiShop": "齐先生的商店",
   "quickShop.button.qiSpecialOrdersBoard": "齐先生的特殊任务板",
   "quickShop.button.sandyShop": "桑迪的商店",
-  "quickShop.button.desertShop": "沙漠商店",
+  "quickShop.button.desertFestival": "沙漠节",
   "quickShop.button.wizardBuilding": "魔法师建筑",
   "quickShop.button.changeAppearance": "改变外表",
   "quickShop.button.islandTrade": "岛屿贸易",
