--- a/QuickShop/i18n/default.json
+++ b/QuickShop/i18n/default.json
@@ -32,6 +32,7 @@
   "quickShop.button.qiShop": "Mr.Qi's shop",
   "quickShop.button.qiSpecialOrdersBoard": "Mr.Qi's Special orders board",
   "quickShop.button.sandyShop": "Sandy's shop",
+  "quickShop.button.desertTrade": "Desert trade",
   "quickShop.button.desertFestival": "Desert Festival",
   "quickShop.button.islandTrade": "Island trade",
   "quickShop.button.resortBar": "Resort bar",
