--- a/QuickShop/i18n/default.json
+++ b/QuickShop/i18n/default.json
@@ -8,7 +8,7 @@
   "quickShop.button.krobusShop": "Krobus's shop",
   "quickShop.button.marnieShop": "Marnie's shop",
   "quickShop.button.animalShop": "Animal shop",
-  "quickShop.button.merchantShop": "Traveling cart shop",
+  "quickShop.button.travelingCart": "Traveling cart",
   "quickShop.button.magicShopBoat": "Magic shop boat",
   "quickShop.button.decorationBoatShop": "Decoration boat shop",
   "quickShop.button.renovation": "Renovation",
@@ -23,6 +23,14 @@
   "quickShop.button.joJaCD": "JoJa CD Project",
   "quickShop.button.iceCreamStand": "Ice cream stand",
   "quickShop.button.dwarfShop": "Dwarf's shop",
+  "quickShop.button.danceOfTheMoonlightJellies": "Dance of the Moonlight Jellies",
+  "quickShop.button.eggFestival": "Egg Festival",
+  "quickShop.button.feastOfTheWinterStar": "Feast of the Winter Star",
+  "quickShop.button.festivalOfIceTravelingMerchant": "Festival of Ice Traveling Merchant",
+  "quickShop.button.flowerDance": "Flower Dance",
+  "quickShop.button.luau": "Luau",
+  "quickShop.button.spiritsEve": "Spirit's Eve",
+  "quickShop.button.stardewValleyFair": "Stardew Valley Fair",
   "quickShop.button.volcanoDungeonShop": "Volcano dungeon shop",
   "quickShop.button.marlonShop": "Marlon's shop",
   "quickShop.button.adventureGuildRecovery": "Adventure guild recovery",
@@ -37,7 +45,9 @@
   "quickShop.button.islandTrade": "Island trade",
   "quickShop.button.resortBar": "Resort bar",
   "quickShop.button.wizardBuilding": "Magic building",
+  "quickShop.button.prizeTicket": "Prize ticket",
   "quickShop.button.changeAppearance": "Change appearance",
+  "quickShop.button.changeProfessions": "Change professions",
   "quickShop.button.bundles": "Bundles",
   "quickShop.button.sewing": "Sewing machine",
   "quickShop.button.dye": "Dye",
@@ -49,8 +59,10 @@
   "quickShop.button.houseUpgrade": "House upgrade",
   "quickShop.button.houseUpgrade.communityUpgrade": "Community upgrade",
   "quickShop.button.houseUpgrade.communityUpgrade.description": "Build a house for Pam",
-  "quickShop.button.raccoonShop": "Raccoon shop",
+  "quickShop.button.raccoonShop": "Raccoon's Shop",
+  "quickShop.button.booksellerShop": "Bookseller's Shop",
   "quickShop.button.booksellerTrade": "Bookseller trade",
   "quickShop.button.concessions": "Movie theater concessions",
-  "quickShop.button.petAdoption": "Pet adoption"
+  "quickShop.button.petAdoption": "Pet adoption",
+  "quickShop.button.divorce": "Divorce"
 }
