--- a/QuickShop/i18n/zh.json
+++ b/QuickShop/i18n/zh.json
@@ -8,7 +8,7 @@
   "quickShop.button.krobusShop": "科罗布斯的商店",
   "quickShop.button.marnieShop": "玛尼的商店",
   "quickShop.button.animalShop": "动物商店",
-  "quickShop.button.merchantShop": "旅行货车商店",
+  "quickShop.button.travelingCart": "旅行货车",
   "quickShop.button.magicShopBoat": "魔法商船",
   "quickShop.button.decorationBoatShop": "装饰船店",
   "quickShop.button.renovation": "装修工程",
@@ -23,6 +23,14 @@
   "quickShop.button.joJaCD": "JoJa社区开发",
   "quickShop.button.iceCreamStand": "冰淇淋架",
   "quickShop.button.dwarfShop": "矮人的商店",
+  "quickShop.button.danceOfTheMoonlightJellies": "月光水母起舞",
+  "quickShop.button.eggFestival": "复活节",
+  "quickShop.button.feastOfTheWinterStar": "冬日星盛宴",
+  "quickShop.button.festivalOfIceTravelingMerchant": "冰雪节",
+  "quickShop.button.flowerDance": "花舞节",
+  "quickShop.button.luau": "夏威夷宴会",
+  "quickShop.button.spiritsEve": "万灵节",
+  "quickShop.button.stardewValleyFair": "星露谷展览会",
   "quickShop.button.volcanoDungeonShop": "火山地牢店",
   "quickShop.button.marlonShop": "马龙的商店",
   "quickShop.button.adventureGuildRecovery": "冒险公会恢复",
@@ -35,7 +43,9 @@
   "quickShop.button.desertTrade": "沙漠贸易",
   "quickShop.button.desertFestival": "沙漠节",
   "quickShop.button.wizardBuilding": "魔法师建筑",
+  "quickShop.button.prizeTicket": "兑奖券",
   "quickShop.button.changeAppearance": "改变外表",
+  "quickShop.button.changeProfessions": "改变职业",
   "quickShop.button.islandTrade": "岛屿贸易",
   "quickShop.button.resortBar": "度假酒吧",
   "quickShop.button.bundles": "献祭包",
@@ -49,8 +59,10 @@
   "quickShop.button.houseUpgrade": "房子升级",
   "quickShop.button.houseUpgrade.communityUpgrade": "社区升级",
   "quickShop.button.houseUpgrade.communityUpgrade.description": "为潘姆建一间房子",
-  "quickShop.button.raccoonShop": "浣熊商店",
+  "quickShop.button.raccoonShop": "浣熊的商店",
+  "quickShop.button.booksellerShop": "书摊老板的商店",
   "quickShop.button.booksellerTrade": "书摊老板贸易",
   "quickShop.button.concessions": "电影院小吃",
-  "quickShop.button.petAdoption": "领养宠物"
+  "quickShop.button.petAdoption": "领养宠物",
+  "quickShop.button.divorce": "离婚"
 }
