--- a/QuickShop/i18n/zh.json
+++ b/QuickShop/i18n/zh.json
@@ -10,7 +10,7 @@
   "quickShop.button.animalShop": "动物商店",
   "quickShop.button.travelingCart": "旅行货车",
   "quickShop.button.magicShopBoat": "魔法商船",
-  "quickShop.button.decorationBoatShop": "装饰船店",
+  "quickShop.button.decorationBoatShop": "装饰船商店",
   "quickShop.button.renovation": "装修工程",
   "quickShop.button.clintShop": "克林特的商店",
   "quickShop.button.upgrade": "工具升级",
@@ -31,7 +31,7 @@
   "quickShop.button.luau": "夏威夷宴会",
   "quickShop.button.spiritsEve": "万灵节",
   "quickShop.button.stardewValleyFair": "星露谷展览会",
-  "quickShop.button.volcanoDungeonShop": "火山地牢店",
+  "quickShop.button.volcanoDungeonShop": "火山地牢商店",
   "quickShop.button.marlonShop": "马龙的商店",
   "quickShop.button.adventureGuildRecovery": "冒险公会恢复",
   "quickShop.button.hatShop": "帽子商店",
@@ -48,7 +48,7 @@
   "quickShop.button.changeProfessions": "改变职业",
   "quickShop.button.islandTrade": "岛屿贸易",
   "quickShop.button.resortBar": "度假酒吧",
-  "quickShop.button.bundles": "献祭包",
+  "quickShop.button.bundles": "收集包",
   "quickShop.button.sewing": "缝纫机",
   "quickShop.button.dye": "染料",
   "quickShop.button.forge": "锻造",
