--- a/QuickShop/i18n/zh.json
+++ b/QuickShop/i18n/zh.json
@@ -1,4 +1,18 @@
 ﻿{
+  "quickShop.screen.normalShop.title": "一般商店",
+  "quickShop.screen.festivalShop.title": "节日商店",
+  "quickShop.screen.setting.title": "设置",
+  "quickShop.screen.setting.allowToolUpgradeAgain": "允许再次升级工具",
+  "quickShop.screen.setting.allowToolUpgradeAgain.description": "有其他的工具在升级时, 还可以继续升级工具(会得到重复类型的工具)",
+  "quickShop.screen.setting.allowBuildingAgain": "允许再次建造建筑",
+  "quickShop.screen.setting.allowBuildingAgain.description": "有其他的建筑在建造时, 还可以继续建造建筑",
+  "quickShop.label.shop": "商店:",
+  "quickShop.label.utility": "实用:",
+  "quickShop.button.normalShop": "一般商店",
+  "quickShop.button.normalShop.description": "进入一般商店列表",
+  "quickShop.button.festivalShop": "节日商店",
+  "quickShop.button.festivalShop.description": "进入节日商列表",
+  "quickShop.button.setting": "设置",
   "quickShop.button.pierreShop": "皮埃尔的商店",
   "quickShop.button.harveyShop": "哈维的商店",
   "quickShop.button.gusShop": "格斯的商店",
