--- a/QuickShop/i18n/default.json
+++ b/QuickShop/i18n/default.json
@@ -1,7 +1,21 @@
 ﻿{
+  "quickShop.screen.normalShop.title": "Normal shop",
+  "quickShop.screen.festivalShop.title": "Festival shop",
+  "quickShop.screen.setting.title": "Setting",
+  "quickShop.screen.setting.allowToolUpgradeAgain": "Allow tool upgrade again",
+  "quickShop.screen.setting.allowToolUpgradeAgain.description": "Allow a tool to be upgrade again when another tool is being upgraded(You will get a tool of a higher level of the same kind)",
+  "quickShop.screen.setting.allowBuildingAgain": "Allow building again",
+  "quickShop.screen.setting.allowBuildingAgain.description": "Allow a building to be built again when another building is being built",
+  "quickShop.label.shop": "Shop:",
+  "quickShop.label.utility": "Utility:",
+  "quickShop.button.normalShop": "Normal shop",
+  "quickShop.button.normalShop.description": "Into the normal shop list",
+  "quickShop.button.festivalShop": "Festival shop",
+  "quickShop.button.festivalShop.description": "Into the festival shop list",
+  "quickShop.button.setting": "Setting",
   "quickShop.button.pierreShop": "Pierre's shop",
   "quickShop.button.harveyShop": "Harvey's shop",
-  "quickShop.button.gusShop": "Gus's Shop",
+  "quickShop.button.gusShop": "Gus's shop",
   "quickShop.button.robinShop": "Robin's shop",
   "quickShop.button.carpenterBuilding": "Carpenter building",
   "quickShop.button.willyShop": "Willy's shop",
@@ -59,8 +73,8 @@
   "quickShop.button.houseUpgrade": "House upgrade",
   "quickShop.button.houseUpgrade.communityUpgrade": "Community upgrade",
   "quickShop.button.houseUpgrade.communityUpgrade.description": "Build a house for Pam",
-  "quickShop.button.raccoonShop": "Raccoon's Shop",
-  "quickShop.button.booksellerShop": "Bookseller's Shop",
+  "quickShop.button.raccoonShop": "Raccoon's shop",
+  "quickShop.button.booksellerShop": "Bookseller's shop",
   "quickShop.button.booksellerTrade": "Bookseller trade",
   "quickShop.button.concessions": "Movie theater concessions",
   "quickShop.button.petAdoption": "Pet adoption",
