--- a/QuickShop/i18n/default.json
+++ b/QuickShop/i18n/default.json
@@ -1,11 +1,12 @@
 ﻿{
   "quickShop.screen.normalShop.title": "Normal shop",
   "quickShop.screen.festivalShop.title": "Festival shop",
-  "quickShop.screen.setting.title": "Setting",
-  "quickShop.screen.setting.allowToolUpgradeAgain": "Allow tool upgrade again",
-  "quickShop.screen.setting.allowToolUpgradeAgain.description": "Allow a tool to be upgrade again when another tool is being upgraded(You will get a tool of a higher level of the same kind)",
-  "quickShop.screen.setting.allowBuildingAgain": "Allow building again",
-  "quickShop.screen.setting.allowBuildingAgain.description": "Allow a building to be built again when another building is being built",
+  "QuickShop.Framework.Config.OpenQuickShop.Name": "Open QuickShop",
+  "QuickShop.Framework.Config.OpenQuickShop.Description": "The key to open QuickShop",
+  "QuickShop.Framework.Config.AllowToolUpgradeAgain.Name": "Allow tool upgrade again",
+  "QuickShop.Framework.Config.AllowToolUpgradeAgain.Description": "Allow a tool to be upgrade again when another tool is being upgraded(You will get a tool of a higher level of the same kind)",
+  "QuickShop.Framework.Config.AllowBuildingAgain.Name": "Allow building again",
+  "QuickShop.Framework.Config.AllowBuildingAgain.Description": "Allow a building to be built again when another building is being built",
   "quickShop.label.shop": "Shop:",
   "quickShop.label.utility": "Utility:",
   "quickShop.button.normalShop": "Normal shop",
