--- a/QuickShop/i18n/zh.json
+++ b/QuickShop/i18n/zh.json
@@ -1,11 +1,12 @@
 ﻿{
   "quickShop.screen.normalShop.title": "一般商店",
   "quickShop.screen.festivalShop.title": "节日商店",
-  "quickShop.screen.setting.title": "设置",
-  "quickShop.screen.setting.allowToolUpgradeAgain": "允许再次升级工具",
-  "quickShop.screen.setting.allowToolUpgradeAgain.description": "有其他的工具在升级时, 还可以继续升级工具(会得到重复类型的工具)",
-  "quickShop.screen.setting.allowBuildingAgain": "允许再次建造建筑",
-  "quickShop.screen.setting.allowBuildingAgain.description": "有其他的建筑在建造时, 还可以继续建造建筑",
+  "QuickShop.Framework.Config.OpenQuickShop.Name": "打开快捷商店",
+  "QuickShop.Framework.Config.OpenQuickShop.Description": "打开快捷商店的按键",
+  "QuickShop.Framework.Config.AllowToolUpgradeAgain.Name": "允许再次升级工具",
+  "QuickShop.Framework.Config.AllowToolUpgradeAgain.Description": "有其他的工具在升级时, 还可以继续升级工具(会得到重复类型的工具)",
+  "QuickShop.Framework.Config.AllowBuildingAgain.Name": "允许再次建造建筑",
+  "QuickShop.Framework.Config.AllowBuildingAgain.Description": "有其他的建筑在建造时, 还可以继续建造建筑",
   "quickShop.label.shop": "商店:",
   "quickShop.label.utility": "实用:",
   "quickShop.button.normalShop": "一般商店",
